apps/base/media/sonarr-template/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      targetPort: 8989
      port: 8989
