apps/base/media/sonarr-template/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: sonarr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
